[gd_scene load_steps=22 format=3 uid="uid://2xc7iukl6ghm"]

[ext_resource type="Texture2D" uid="uid://blkyjoq1sfog6" path="res://sprites/background.svg" id="1_4qnlp"]
[ext_resource type="Script" uid="uid://dh33sogk62kn6" path="res://scripts/board.gd" id="2_y628x"]
[ext_resource type="PackedScene" uid="uid://d0vemywseygr6" path="res://scenes/box.tscn" id="3_bohvn"]
[ext_resource type="PackedScene" uid="uid://bh4a4dg1bph6j" path="res://scenes/bullet_indicator.tscn" id="4_kbwtv"]
[ext_resource type="PackedScene" uid="uid://dfb4cwf8wj355" path="res://scenes/wall.tscn" id="4_x7vh5"]
[ext_resource type="PackedScene" uid="uid://b24g5hbcrgx88" path="res://scenes/bullet.tscn" id="5_iuerm"]
[ext_resource type="Texture2D" uid="uid://duflvhgdwjv07" path="res://sprites/player.svg" id="6_gjvqj"]
[ext_resource type="PackedScene" uid="uid://cxp7fgws4fvww" path="res://scenes/enemy.tscn" id="7_ttl0k"]
[ext_resource type="AudioStream" uid="uid://x7umyw3h2jh5" path="res://sounds/slide.wav" id="9_rdfn8"]
[ext_resource type="AudioStream" uid="uid://bxwc8w1kyfppg" path="res://sounds/shoot.wav" id="10_itq25"]
[ext_resource type="Texture2D" uid="uid://bdodrgqf0wwbk" path="res://sprites/ui/reset_icon.svg" id="11_0pjs3"]
[ext_resource type="Texture2D" uid="uid://yfaqch5kdc73" path="res://sprites/ui/menu_icon.svg" id="11_5a3dp"]
[ext_resource type="Shader" uid="uid://cujewei8h3d5a" path="res://shaders/blur.gdshader" id="14_qanrj"]
[ext_resource type="Script" uid="uid://cipry4i6dg1md" path="res://scripts/board_ui.gd" id="15_o2hle"]
[ext_resource type="Theme" uid="uid://cjbd068b7pstb" path="res://themes/shooter_theme.tres" id="15_xpmhc"]
[ext_resource type="Script" uid="uid://rvxxh056twrl" path="res://scripts/swipe_detector.gd" id="16_lajar"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vevib"]
shader = ExtResource("14_qanrj")
shader_parameter/amount = 1.5
shader_parameter/brightness = 0.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p3su8"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1huyh"]
shader = ExtResource("14_qanrj")
shader_parameter/amount = 1.5
shader_parameter/brightness = 0.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vevib"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_m4vny"]
texture = ExtResource("1_4qnlp")
texture_margin_left = 8.0
texture_margin_top = 8.0
texture_margin_right = 8.0
texture_margin_bottom = 8.0

[node name="Board" type="Node2D"]
script = ExtResource("2_y628x")
BOX_SCENE = ExtResource("3_bohvn")
WALL_SCENE = ExtResource("4_x7vh5")
BULLET_INDICATOR_SCENE = ExtResource("4_kbwtv")
BULLET_SCENE = ExtResource("5_iuerm")

[node name="Playfield" type="NinePatchRect" parent="."]
unique_name_in_owner = true
texture_filter = 1
offset_right = 720.0
offset_bottom = 720.0
texture = ExtResource("1_4qnlp")
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 32
patch_margin_bottom = 32

[node name="Enemy" parent="." instance=ExtResource("7_ttl0k")]
unique_name_in_owner = true

[node name="Player" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(360, 0)
texture = ExtResource("6_gjvqj")
offset = Vector2(0, 256)

[node name="TouchScreenButton" type="TouchScreenButton" parent="Player"]
modulate = Color(1, 1, 1, 0)
position = Vector2(-256, 0)
texture_normal = ExtResource("6_gjvqj")
texture_pressed = ExtResource("6_gjvqj")
action = "shoot"
visibility_mode = 1

[node name="SlideSfx" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("9_rdfn8")

[node name="ShootSfx" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("10_itq25")

[node name="MenuButton" type="Button" parent="."]
unique_name_in_owner = true
offset_right = 48.0
offset_bottom = 48.0
focus_neighbor_right = NodePath("../ResetButton")
focus_next = NodePath("../ResetButton")
theme = ExtResource("15_xpmhc")
icon = ExtResource("11_5a3dp")
icon_alignment = 1
expand_icon = true

[node name="ResetButton" type="Button" parent="."]
unique_name_in_owner = true
offset_right = 176.0
offset_bottom = 176.0
focus_neighbor_left = NodePath("../MenuButton")
focus_previous = NodePath("../MenuButton")
theme = ExtResource("15_xpmhc")
icon = ExtResource("11_0pjs3")
icon_alignment = 1
expand_icon = true

[node name="Menu" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
material = SubResource("ShaderMaterial_vevib")
offset_right = 720.0
offset_bottom = 1280.0
theme_override_styles/panel = SubResource("StyleBoxFlat_p3su8")
script = ExtResource("15_o2hle")

[node name="Margins" type="MarginContainer" parent="Menu"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 200
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 200

[node name="Buttons" type="VBoxContainer" parent="Menu/Margins"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("15_xpmhc")
alignment = 1

[node name="BackButton" type="Button" parent="Menu/Margins/Buttons"]
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
size_flags_vertical = 6
text = "Back"

[node name="RestartButton" type="Button" parent="Menu/Margins/Buttons"]
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
size_flags_vertical = 6
text = "Restart"
expand_icon = true

[node name="EditButton" type="Button" parent="Menu/Margins/Buttons"]
unique_name_in_owner = true
layout_mode = 2

[node name="LevelSelectButton" type="Button" parent="Menu/Margins/Buttons"]
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
size_flags_vertical = 6
text = "Level Select"

[node name="SwipeDetector" type="Node" parent="."]
script = ExtResource("16_lajar")

[node name="SwipeDelay" type="Timer" parent="SwipeDetector"]
wait_time = 0.5
one_shot = true

[node name="NotificationPanel" type="PanelContainer" parent="."]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_1huyh")
offset_right = 720.0
offset_bottom = 1280.0
theme = ExtResource("15_xpmhc")
theme_override_styles/panel = SubResource("StyleBoxFlat_vevib")

[node name="MarginContainer" type="MarginContainer" parent="NotificationPanel"]
layout_mode = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_right = 64

[node name="VBoxContainer" type="VBoxContainer" parent="NotificationPanel/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 30

[node name="Background" type="PanelContainer" parent="NotificationPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("15_xpmhc")
theme_override_styles/panel = SubResource("StyleBoxTexture_m4vny")

[node name="MarginContainer" type="MarginContainer" parent="NotificationPanel/MarginContainer/VBoxContainer/Background"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="NotificationLabel" type="Label" parent="NotificationPanel/MarginContainer/VBoxContainer/Background/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 256)
layout_mode = 2
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="OkButton" type="Button" parent="NotificationPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Close
"

[connection signal="pressed" from="MenuButton" to="Menu" method="_on_menu_button_pressed"]
[connection signal="pressed" from="ResetButton" to="Menu" method="_on_reset_button_pressed"]
[connection signal="pressed" from="Menu/Margins/Buttons/BackButton" to="Menu" method="_on_back_button_pressed"]
[connection signal="pressed" from="Menu/Margins/Buttons/RestartButton" to="Menu" method="_on_restart_button_pressed"]
[connection signal="pressed" from="Menu/Margins/Buttons/EditButton" to="Menu" method="_on_edit_button_pressed"]
[connection signal="pressed" from="Menu/Margins/Buttons/LevelSelectButton" to="Menu" method="_on_level_select_button_pressed"]
[connection signal="pressed" from="NotificationPanel/MarginContainer/VBoxContainer/OkButton" to="." method="_on_notification_dismissed"]
